Azure-vm/subnet.tf
resource "azurerm_subnet" "example" {
  name                 = var.subnet_name
  resource_group_name  = azurerm_resource_group.example.name
  virtual_network_name = azurerm_virtual_network.example.name
  address_prefixes     = var.subnet1_prefix

  depends_on = [azurerm_virtual_network.example]
}
